cf-application-server.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Application Server with public ip
Parameters:
  ApplicationName:
    Default: change-me
    Description: "Application Name"
    Type: String
  
Resources:
  ApplicationServer:
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: "ami-acd367cf" # default to LAMP stack
      InstanceType: t2.micro
      KeyName: "mitrais-ap-southeast-1"
      IamInstanceProfile: CodeDeploy
      NetworkInterfaces: 
        - AssociatePublicIpAddress : true
          DeviceIndex: 0
          DeleteOnTermination: true
          SubnetId: "subnet-c35286b4"
          GroupSet: 
            - Ref: ApplicationSecurityGroup
      Tags:
        - Key: Name
          Value: 
            Ref: ApplicationName

  ApplicationSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable port 80 and 22"
      VpcId: "vpc-fe48829b"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"

  CodeDeployApplication:
    Type: AWS::CodeDeploy::Application
    Properties:
      ApplicationName: 
        Ref: ApplicationName

  DeploymentGroup:
    Type: AWS::CodeDeploy::DeploymentGroup
    Properties:
      ApplicationName:
        Ref: ApplicationName
      DeploymentConfigName: CodeDeployDefault.OneAtATime
      ServiceRoleArn: arn:aws:iam::019908562201:role/CodeDeploy_DemoApplication
      DeploymentGroupName: 
        Ref: ApplicationName
      Ec2TagFilters:
      - Key: Name
        Type: KEY_AND_VALUE
        Value: 
          Ref: ApplicationName

Outputs:
  PublicIP:
    Description: "Public IP"
    Value: !GetAtt ApplicationServer.PublicIp
  PublicDnsName:
    Description: "Public DNS Name"
    Value: !GetAtt ApplicationServer.PublicDnsName
